AbstractIntegrationTest: assertion migration to TestNG (from JUnit)